--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,25 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model List<Lutador>;
+@{
+    ViewData["Title"] = "Torneio de Luta";
+    var primeiroLutador = Model.First();
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<h1 class="display-1 text-center">Torneio de Luta</h1>
+<button type="text-center" class="btn btn-primary" asp-controller="Home" asp-action="Iniciar"> Iniciar Torneio </button>
+
+<div class="container">
+    <div class="card-deck">
+        @foreach(var card in Model)
+        {
+            <div class="card bg-light">
+                <div class="card-body text-center">
+                    <header class="display-5 bg-info"> @card.Nome </header>
+                    <p class="card-text"> <strong> Idade: </strong> @card.Idade </p>
+                    <p class="card-text"> <strong> Lutas: </strong> @card.Lutas </p>
+                    <p class="card-text"> <strong> Vitorias: </strong> @card.Vitorias</p>
+                    <p class="card-text"><strong> Derrotas: </strong> @card.Derrotas</p>
+                </div>
+            </div>   
+        }
+       
 </div>
