--- a/Views/Home/Resultado.cshtml
+++ b/Views/Home/Resultado.cshtml
@@ -13,7 +13,7 @@
 
     <img src="~/images/trophy.jpg" width="250px" height="250px"></img>
 
-    <h2 class="display-5">@Model.Nome</h2>
+    <h2 class="display-5 font-weight-bold"><strong> @Model.Nome </strong></h2>
 
-    <a asp-action="Index" class="btn btn-primary mt-4">Jogar Novamente</a>
+    <a asp-action="Index" class="btn btn-primary mt-2">Jogar Novamente</a>
 </div>
