Adicionando quantidade de Artes Marciais

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -38,6 +38,7 @@
                     <p class="card-text"> <strong> Lutas: </strong> @Model[i].Lutas </p>
                     <p class="card-text"> <strong> Vitorias: </strong> @Model[i].Vitorias</p>
                     <p class="card-text"><strong> Derrotas: </strong> @Model[i].Derrotas</p>
+                    <p class="card-text"> <strong> Artes Marciais: </strong> @Model[i].ArtesMarciais.Count </p>
                 </div>
             </div>
         }  
